Finishes to fixes #115 and # 116 evolutions
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1469 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/change_password.html.haml
+++ b/app/views/company/change_password.html.haml
@@ -1,10 +1,11 @@
--form_tag do
-  =formalize do |f|
-    -f.error 'user'
-    -f.title tc("insert_actual_password")
-    -f.field :user, :old_password, :null=>false
-    -f.title tc("insert_password")
-    -f.field :user, :password, :null=>false
-    -f.field :user, :password_confirmation, :null=>false
-  .actions
-    =submit_tag tg(:apply)
+-form_tag(nil, {:flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
+  .fields{:flex=>10}
+    =formalize do |f|
+      -f.error 'user'
+      -f.title tc("insert_actual_password")
+      -f.field :user, :old_password, :null=>false
+      -f.title tc("insert_password")
+      -f.field :user, :password, :null=>false
+      -f.field :user, :password_confirmation, :null=>false
+    .end
+  .actions=submit_tag tg(:apply)
