--- a/app/views/shared/form_update.html.haml
+++ b/app/views/shared/form_update.html.haml
@@ -1,5 +1,17 @@
-- form_tag({}, {:id=>@options[:id]}) do
-  =render :partial=>@partial
+-form_id = @options[:id]||"f"+rand.to_s[2..-1]
+-if params[:dialog]
+  -jsaction = params[:formalize] ? Marshal.load(ActiveSupport::Base64.decode64(params[:formalize])) : nil
+  -form_remote_tag(:url=>{:dialog=>params[:dialog], :formalize=>params[:formalize]}, 250=>"#{jsaction}; closeDialog('#{params[:dialog]}')", 200=>"$('#{params[:dialog]}').update(request.responseText).resize();", :html=>{:id=>form_id, :flex=>1, :orient=>:vertical, :style=>'overflow:none'}, :loaded=>"resizeDialog('#{params[:dialog]}')") do
+    .fields{:flex=>10}
+      =render :partial=>@partial
+      .end
+    .actions
+      =submit_tag(tg(@options[:submit]||:update))
+      =link_to_function(tg(@options[:cancel]||:cancel), "closeDialog('#{params[:dialog]}')")
+-form_tag(nil, {:id=>form_id, :flex=>1, :orient=>:vertical, :style=>'overflow:none'}) do
+  .fields{:flex=>10}
+    =render :partial=>@partial
+    .end
   .actions
     =submit_tag(tg(@options[:submit]||:update))
     =link_to_back :label=>@options[:cancel]||:cancel
