--- a/app/views/resources/_employee_form.html.haml
+++ b/app/views/resources/_employee_form.html.haml
@@ -7,10 +7,8 @@
     - f.field :user, :first_name
     - f.field :user, :last_name
   - f.field :user, :commercial
-  -# f.field :user, :profession_id,  :choices => @current_company.professions.find(:all).collect {|p| [p.name, p.id]}, :new => {:action => :profession_create} 
-  - unless defined? create_user
-    - f.field :user, :user_id, :choices => @current_company.users.find(:all).collect {|u| [u.name, u.id]}, :new => {:controller => :company, :action => :user_create} , :options=>{:include_blank=>tc(:select_user)}
-  - f.field :user, :department_id, :choices => @current_company.departments.find(:all).collect {|d| [d.name, d.id]}, :new => {:controller => :company, :action => :department_create} 
-  - f.field :user, :establishment_id, :choices => @current_company.establishments.find(:all).collect {|e| [e.name,e.id]}, :new => {:controller => :company, :action => :establishment_create} 
+  -# f.field :user, :profession_id,  :choices=>{:reflection=>:professions}, :new=>{:action => :profession_create} 
+  - f.field :user, :department_id, :choices=>{:reflection=>:departments}, :new=>{:controller => :company, :action => :department_create} 
+  - f.field :user, :establishment_id, :choices=>{:reflection=>:establishments}, :new => {:controller => :company, :action => :establishment_create}
  
  
