--- a/app/views/management/locations.html.haml
+++ b/app/views/management/locations.html.haml
@@ -1,4 +1,4 @@
 =toolbar do
-  -link :location_create, {:mode=>:original}
-  -link :reservoirs_create, {:action=>:location_create, :mode=>:reservoir}
+  -link :location_create
+  -link :reservoirs_create, {:action=>:location_create, :reservoir=>true}
 =dyta :locations
