--- a/app/views/company/listing_update.html.haml
+++ b/app/views/company/listing_update.html.haml
@@ -1,5 +1,6 @@
 =toolbar do
   -link :listing_extract, :id=>@listing.id
+  -link :listing_mail, :id=>@listing.id
 
 -form_tag do
   =formalize do |f|
