--- a/app/views/management/_product_form.html.haml
+++ b/app/views/management/_product_form.html.haml
@@ -1,3 +1,4 @@
+-location_id = nil
 =formalize do |f|
   -f.error :product
   -f.error :stock
@@ -31,7 +32,7 @@
   -f.field :stock, :critic_quantity_min
   -f.field :stock, :quantity_max
   -if @locations.size > 1
-    -f.field :stock, :location_id, :choices=>{:reflection=>:locations}, :new=>{:action=>:location_create}
+    -location_id = f.field :stock, :location_id, :choices=>{:reflection=>:locations}, :new=>{:action=>:location_create}
 =formalize do |f|
   -#f.field :product, :comment
 =formalize do |f|
@@ -40,22 +41,21 @@
   -f.field :product, :charge_account_id, :choices=>{:reflection=>:charges_accounts}, :new=>{:controller=>:accountancy, :action=>:account_create}
 
 :javascript
-  window.display_service_coeff = function(element) { 
-    toggleElement('service_coeff', $(element).checked);
+  window.toggleService = function() { 
+    toggleElement('service_coeff', $('product_nature_service').checked);
   }
-  display_service_coeff('product_nature_service');
-  window.subscription = function() {
+  toggleService();
+  window.toggleSubscription = function() {
     toggleElement('subscriptions', $('product_nature_subscrip').checked);
   }
-  subscription();
-  window.stocks = function() {
+  toggleSubscription();
+  window.toggleStocks = function() {
     toggleElement('stocks', $('product_manage_stocks').checked);
   }
-  stocks();
+  toggleStocks();
 
-=javascript_tag("")
-=observe_field("product_nature_service", :frequency =>0.25, :function => "display_service_coeff(element);" )
+=observe_field("product_nature_service", :frequency =>0.25, :function => "toggleService();")
 -if request.url.to_s.include? "update"
-  =observe_field("location_id", :url=>{:action=>:change_quantities}, :frequency=>0.25, :with=>"location_id")
-=observe_field("product_manage_stocks", :frequency=>0.25, :function=> "stocks();")
-=observe_field("product_nature_subscrip", :frequency=>0.25, :function=>"subscription();")
+  =observe_field(location_id, :url=>{:action=>:change_quantities}, :frequency=>0.25, :with=>"location_id")
+=observe_field("product_manage_stocks", :frequency=>0.25, :function=> "toggleStocks();")
+=observe_field("product_nature_subscrip", :frequency=>0.25, :function=>"toggleSubscription();")
