--- a/app/views/management/_sale_order_form.html.haml
+++ b/app/views/management/_sale_order_form.html.haml
@@ -1,36 +1,36 @@
 =sale_steps
-
+-sale_order_client_id = nil
 =formalize do |f| 
-  - f.error 'sale_order'
-  - f.title :client
-  - f.field :sale_order, :client_id, :choices=>:clients, :new=>{:controller=>:relations, :action=>:entity_create}
-  - f.title :conditions
-  - f.field :sale_order, :nature_id, :choices=>{:reflection=>:sale_order_natures}, :new=>{:action=>:sale_order_nature_create}
-  - f.field :sale_order, :currency_id, :choices=>{:reflection=>:currencies}
-  - f.field :sale_order, :responsible_id, :choices=>{:reflection=>:employees}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
-  - f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
-  - f.field :sale_order, :delivery_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
-  - f.field :sale_order, :invoice_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
-  - f.field :sale_order, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>"--Aucun--"}
-  - f.field :sale_order, :comment, :field=>:textarea
-  - f.field :sale_order, :letter_format
+  -f.error 'sale_order'
+  -f.title :client
+  -sale_order_client_id = f.field :sale_order, :client_id, :choices=>:clients, :new=>{:controller=>:relations, :action=>:entity_create}
+  -f.title :conditions
+  -f.field :sale_order, :nature_id, :choices=>{:reflection=>:sale_order_natures}, :new=>{:action=>:sale_order_nature_create}
+  -f.field :sale_order, :currency_id, :choices=>{:reflection=>:currencies}
+  -f.field :sale_order, :responsible_id, :choices=>{:reflection=>:employees}, :new=>{:controller=>:company, :action=>:user_create, :employed=>1}
+  -f.field :sale_order, :contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
+  -f.field :sale_order, :delivery_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
+  -f.field :sale_order, :invoice_contact_id, :choices=>@contacts, :new=>{:controller=>:relations, :action=>:entity_contact_create, :id=>@current_company.entity_id}
+  -f.field :sale_order, :transporter_id, :choices=>{:reflection=>:transporters, :include_blank=>"--Aucun--"}
+  -f.field :sale_order, :comment, :field=>:textarea
+  -f.field :sale_order, :letter_format
 =formalize(:id=>:letter_format) do |f|
-  - f.title :letter
-  - f.field :sale_order, :subject
-  - f.field :sale_order, :function_title
-  - f.field :sale_order, :introduction, :field=>:textarea
-  - f.field :sale_order, :conclusion, :field=>:textarea
+  -f.title :letter
+  -f.field :sale_order, :subject
+  -f.field :sale_order, :function_title
+  -f.field :sale_order, :introduction, :field=>:textarea
+  -f.field :sale_order, :conclusion, :field=>:textarea
 
 :javascript
-  window.update_contacts = function(value) {
+  window.updateContacts = function(value) {
     new Ajax.Request('#{url_for(:controller=>:management, :action => :sale_order_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(response) {
       $('sale_order_contact_id').update(response.responseText);
       $('sale_order_delivery_contact_id').update(response.responseText); 
       $('sale_order_invoice_contact_id').update(response.responseText);  
      }});
   }
-  window.letter_informations = function(){ toggleElement('letter_format', $('sale_order_letter_format').checked); }
-  letter_informations();
+  window.letterInformations = function(){ toggleElement('letter_format', $('sale_order_letter_format').checked); }
+  letterInformations();
 
-=observe_field "sale_order_client_id", :frequency => 0.25, :function=>"update_contacts(value)"
-=observe_field("sale_order_letter_format", :frequency=>0.25, :function=> "letter_informations();")
+=observe_field(sale_order_client_id, :frequency => 0.25, :function=>"updateContacts(value)")
+=observe_field("sale_order_letter_format", :frequency=>0.25, :function=>"letterInformations()")
