--- a/app/views/relations/_event_form.html.haml
+++ b/app/views/relations/_event_form.html.haml
@@ -1,11 +1,12 @@
+-event_nature_id = nil
 =formalize do |f|
   -f.error :event
   -f.field :event, :entity_id, :choices=>:entities, :new=>{:action=>:entity_create}
   -f.field :event, :user_id,   :choices=>{:reflection=>:users, :label=>:label, :order=>:name}, :new=>{:controller=>:company, :action=>:user_create}
-  -f.field :event, :nature_id, :choices=>{:reflection=>:event_natures, :label=>:name, :order=>:name}, :new=>{:action=>:event_nature_create}
+  -event_nature_id = f.field :event, :nature_id, :choices=>{:reflection=>:event_natures, :label=>:name, :order=>:name}, :new=>{:action=>:event_nature_create}
   -f.field :event, :duration
   -f.field  t("activerecord.attributes.event.location"), text_field_with_auto_complete(:event, :location)
   -f.field :event, :reason, :field=>:textarea
   -f.field :event, :started_at
 
-=observe_field("event_nature_id",  :url=>{:action=>:change_minutes}, :frequency=>0.25, :with=>"event_nature_id")
+=observe_field(event_nature_id, :url=>{:action=>:change_minutes}, :frequency=>0.25, :with=>"event_nature_id")
