Fixes some bugs and removing bad version 0.1.4
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1478 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/listing_update.html.haml
+++ b/app/views/company/listing_update.html.haml
@@ -1,6 +1,6 @@
 =toolbar do
-  -link :listing_extract, :id=>@listing.id
-  -link :listing_mail, :id=>@listing.id
+  -link(:listing_extract, :id=>@listing.id)
+  -link(:listing_mail, :id=>@listing.id) if @listing.mail_columns.size > 0
 
 -form_tag do
   =formalize do |f|
