Fixes some bugs and begins #122
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1480 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_sale_order_line_form.html.haml
+++ b/app/views/management/_sale_order_line_form.html.haml
@@ -5,7 +5,8 @@
   -f.error :sale_order_line
   -f.error :subscription
   -f.title :infos
-  -price_id    = f.field :sale_order_line, :price_id, :choices=>{:reflection=>:available_prices}, :new=>{:action=>:price_create, :mode=>:sales}
+  -#price_id    = f.field :sale_order_line, :price_id, :choices=>{:reflection=>:available_prices}, :new=>{:action=>:price_create, :mode=>:sales}
+  -price_id    = f.field :sale_order_line, :price_id, :choices=>:available_prices, :new=>{:action=>:price_create, :mode=>:sales}
   -location_id = f.field :sale_order_line, :location_id, :choices=>{:reflection=>:locations}, :new=>{:action=>:location_create} if @locations.size > 1
   -f.field :sale_order_line, :quantity
   -f.field :sale_order_line, :annotation, :field=>:textarea
