--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -1,28 +1,36 @@
-- register = !defined?(Ekylibre::DONT_REGISTER)
-- download_firefox = !request.env["HTTP_USER_AGENT"].match(/mozilla/i)
-- if request.env["HTTP_USER_AGENT"].to_s.match(/MSIE (\d+\.\d+);/)
-  - bad_browser = ($1.to_f <= 6)
+-register = !defined?(Ekylibre::DONT_REGISTER)
+-download_firefox = !request.env["HTTP_USER_AGENT"].match(/mozilla/i)
+-if request.env["HTTP_USER_AGENT"].to_s.match(/MSIE (\d+\.\d+);/)
+  -bad_browser = ($1.to_f <= 6)
 #login.login{:style=>"display:none"}
   .logoban
-  - form_tag do
+  -form_tag({:url=>params[:url]}) do
     %table
+      -if @current_company or @users
+        %tr
+          %td.label=Company.human_name
+          %td.value
+            -if @users
+              =select_tag("company", options_for_select(@users.collect{|x| [x.company.name, x.company.code]}))
+            -else
+              =link_to(@current_company.name, {:action=>:login, :company=>nil})
       -if ::I18n.active_locales.size > 1
         %tr
           %td.label=tc(:locale)
           %td.value=locale_selector
       %tr
         %td.label=tc :username
-        %td.input=text_field :user, :name, {:value=>session[:user_name], :tabindex=>1}
+        %td.input=text_field_tag :name, params[:name], :tabindex=>1
       %tr
         %td.label=tc :password
-        %td.input=password_field :user, :password, :tabindex=>2
+        %td.input=password_field_tag :password, nil, :tabindex=>2
       %tr
         %td.button{:colspan=>2}=submit_tag(tc(:connect), :tabindex=>3)
-  - if register or download_firefox
+  -if register or download_firefox
     .actions
       =link_to(tc(:register), {:action=>:register}, :class=>"register") if register
       =link_to(tc(:download_firefox), "http://www.mozilla.com/", :class=>"firefox") if download_firefox
-- if bad_browser
+-if bad_browser
   #bad_browser.login
     .logoban
     %h2=tc("bad_browser.title")
@@ -35,7 +43,7 @@
         %td=link_to(tc("bad_browser.wb.safari"), "http://www.apple.com/fr/safari/")
         %td=link_to(tc("bad_browser.wb.opera"), "http://www.opera.com/browser/")
         %td=link_to(tc("bad_browser.wb.ie"), "http://www.microsoft.com/france/windows/ie/")
-- else
+-else
   #nojavascript.login
     .logoban
     .message=tc('no_javascript')
