--- a/app/views/management/_quick_line.html.haml
+++ b/app/views/management/_quick_line.html.haml
@@ -1,7 +1,8 @@
 %fieldset.quick-add
   %legend=tc('title')
   -form_tag(:action=>:sale_order_line_create) do 
-    %nobr=tc('product')+" "+select(:sale_order_line, :price_id, @current_company.available_prices.collect{|x| [x.label, x.id]})
+    -# %nobr=tc('product')+" "+select(:sale_order_line, :price_id, @current_company.available_prices.collect{|x| [x.label, x.id]})
+    %nobr=tc('product')+" "+dyli(:sale_order_line, :price_id, :available_prices)
     %nobr=tc('quantity')+" "+text_field(:sale_order_line, :quantity, :size=>5, :value=>1.0)
     -if @current_user.can?(:give_discounts_on_sale)
       %nobr=tc('discount')+" "+text_field(:sale_order_line, :discount, :size=>5)
