Fixes some bugs on listings
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1483 67a09383-3dfa-4221-8551-890bac9c277c

--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -199,7 +199,7 @@ table.formalize a.fastadd { margin: 0px 8px; }
 .year_field { width: 4.5ex; }
 
 /*.actions { text-align:center; padding:4px !important; background: #e9e9a8; border-top: 1px solid #BEBEBB; margin: 8px 0 0; }*/
-.actions { text-align:center; padding:4px !important; background: #CEC; border-top: 1px solid #ACA; margin: 0; }
+.actions { text-align:center; padding:4px !important; background: #CEC; border: 1px solid #ACA; margin: 0; }
 .actions * { margin: 0px 8px; }
 .actions a { padding: 4px; margin: 4px;}
 .actions a:link, .actions a:visited, .actions a:hover { color:#080;} /* 080 */
