--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -1,28 +1,16 @@
-%h2=tc('file_to_download')
-=toolbar do
-  -link :entities_export
-  
-
-%h2=tc('file_to_upload')
-
--if !@unavailable_entities.nil?
-  -if !@unavailable_entities.empty?
-    .errorExplanation
-      %h2=@unavailable_entities.size.to_s+" erreur(s) ont empéché l'import"
-      %p Il y a eu des problèmes avec les lignes suivantes :
-      %ul
-        -for error in @unavailable_entities
-          %li="ligne "+error[0].to_s+" :  "+ error[1].to_s+" "+error[2].to_s
-
--form_tag({}, :multipart=>true) do
-  =formalize do |f|
-    -f.field tc('csv_file'), file_field(:csv_file, :path)
+-form_tag({}, :multipart=>true, :style=>'overflow:none', :flex=>1, :orient=>:vertical) do
+  .fields{:flex=>10}
+    -if @step == 0
+      =formalize do |f|
+        -f.field tc('upload'), file_field_tag(:upload)
+        -#f.field tc('first_line_as_title'), check_box_tag(:first_line_as_title)
+        -f.field tc('file_nature'), select_tag(:nature, options_for_select(@formats))
+    -elsif @step == 2
+      =formalize do |f|
+        -f.field tg(:file), h(params[:upload].original_filename)
+        -@columns.each_index do |index|
+          -f.field @columns[index], select_tag("column[#{index}]", options_for_select(@options, (@options.detect{|x| x[0].match(/#{@columns[index]}/)}[1] rescue nil)))
+    .end
   .actions
-    =submit_tag(tc(:import),:action=>:entities_import) 
-
-%p{:style=>'padding:5px;'}=tc('defined_columns')
-%ol{:style=>'text-align:left; padding: 0px 50px; '}
-  -for field in @model
-    %li=field[:label]
-%p{:style=>'padding:5px;'}=tc('please_consult_help_to_have_more_informations')
+    =submit_tag(tc(:import))
  
