Fix a bug on document printing in accountancy
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1487 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/_document_options.html.haml
+++ b/app/views/accountancy/_document_options.html.haml
@@ -1,4 +1,4 @@
--nature = @document_template.nature.to_sym
+-nature = (@document_template ? @document_template.nature.to_sym : :unknown)
 -if [:balance_sheet, :income_statement].include?(nature)
   =formalize do |f|
     -f.title Financialyear.human_name 
