--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -1,15 +1,16 @@
--form_tag({}, :multipart=>true, :style=>'overflow:none', :flex=>1, :orient=>:vertical) do
+-form_tag({:id=>@step}, :multipart=>true, :style=>'overflow:none', :flex=>1, :orient=>:vertical) do
   .fields{:flex=>10}
-    -if @step == 0
+    -if @step == :upload
       =formalize do |f|
         -f.field tc('upload'), file_field_tag(:upload)
         -#f.field tc('first_line_as_title'), check_box_tag(:first_line_as_title)
         -f.field tc('file_nature'), select_tag(:nature, options_for_select(@formats))
-    -elsif @step == 2
+    -elsif @step == :columns
+      -params[:columns] ||= {}
       =formalize do |f|
-        -f.field tg(:file), h(params[:upload].original_filename)
         -@columns.each_index do |index|
-          -f.field @columns[index], select_tag("column[#{index}]", options_for_select(@options, (@options.detect{|x| x[0].match(/#{@columns[index]}/)}[1] rescue nil)))
+          -#+" "+content_tag(:div, @first_line[index], :class=>:note)
+          -f.field @columns[index], select_tag("columns[#{index}]", options_for_select(@options, params[:columns][index.to_s]||(@options.detect{|x| x[0].match(/#{@columns[index]}/)}[1] rescue nil)))+" "+content_tag(:span, @first_line[index], :class=>:note)
     .end
   .actions
     =submit_tag(tc(:import))
