--- a/app/views/relations/entities_import.html.haml
+++ b/app/views/relations/entities_import.html.haml
@@ -2,16 +2,37 @@
   .fields{:flex=>10}
     -if @step == :upload
       =formalize do |f|
+        -f.title :upload
         -f.field tc('upload'), file_field_tag(:upload)
         -#f.field tc('first_line_as_title'), check_box_tag(:first_line_as_title)
         -f.field tc('file_nature'), select_tag(:nature, options_for_select(@formats))
     -elsif @step == :columns
       -params[:columns] ||= {}
       =formalize do |f|
+        -f.title :columns
         -@columns.each_index do |index|
-          -#+" "+content_tag(:div, @first_line[index], :class=>:note)
           -f.field @columns[index], select_tag("columns[#{index}]", options_for_select(@options, params[:columns][index.to_s]||(@options.detect{|x| x[0].match(/#{@columns[index]}/)}[1] rescue nil)))+" "+content_tag(:span, @first_line[index], :class=>:note)
+    -elsif @step == :validate
+      -if @report[:errors].keys.size > 0
+        .flash.warning
+          %h3=tg('notifications.warning')
+          %p=tc(:errors_explanation)
+          %ul
+            -for index, errors in @report[:errors]
+              %li
+                %span=tc(:line, :index=>index)
+                %ul
+                  -for error in errors
+                    %li=error
+      .flash.information
+        %h3=tg('notifications.information')
+        %p=tc(:importation_explanation)
     .end
   .actions
-    =submit_tag(tc(:import))
+    -if @step == :validate
+      =link_to(tg(:previous), :id=>:columns)
+      =submit_tag(tg(:import))
+    -else
+      =link_to(tg(:previous), :id=>:upload) if @step == :columns
+      =submit_tag(tg(:next))
  
